added simple user_info
