# lingualab-api/src/main/resources/openapi.yaml
@@ -22,8 +22,8 @@ paths:
   '/api/v1/user/{username}':
     get:
       tags:
-        - auth
-      operationId: getUser
+        - user
+      operationId: getUserByUsername
       parameters:
         - in: path
           name: username
@@ -37,7 +37,26 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserDto'
+  '/api/v1/user/{id}':
+    get:
+      tags:
+        - user
+      operationId: getUserById
 
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserDto'
 components:
   schemas:
     RegisterRequestDto:
@@ -49,7 +68,7 @@ components:
           type: string
         role:
           type: string
-    UserDto:
+    AuthDto:
       type: object
       properties:
         id:
@@ -61,3 +80,97 @@ components:
           type: string
         role:
           type: string
+
+    UserDto:
+      type: object
+      description: информация о пользователе
+      properties:
+        id:
+          description: ID пользователя
+          type: integer
+          format: int64
+        surname:
+          description: фамилия
+          type: string
+        name:
+          description: имя
+          type: string
+        role:
+          type: integer
+          format: int64
+        teacher:
+          $ref: '#/components/schemas/UserDto'
+    PackDto:
+      type: object
+      description: Набор слов
+      properties:
+        id:
+          description: идентификатор набора
+          type: integer
+          format: int64
+        createdBy:
+          $ref: '#/components/schemas/UserDto'
+        createdAt:
+          description: дата создания
+          type: string
+          format: date-time
+        name:
+          description: название набора слов
+          type: string
+
+    WordDto:
+      type: object
+      description: Слово для изучения
+      properties:
+        id:
+          description: идентификатор
+          type: integer
+          format: int64
+        packId:
+          description: идентификатор набора
+          type: integer
+          format: int64
+        addedBy:
+          description: идентификатор пользователя, добавившего слово
+          type: integer
+          format: int64
+        word:
+          type: string
+          description: слово
+        translation:
+          type: string
+          description: перевод слова
+        transcription:
+          type: string
+          description: транскрипция слова
+          nullable: true
+        image:
+          type: string
+          description: поясняющая картинка
+          nullable: true
+
+    Homework:
+      type: string
+      description: домашняя работа
+      properties:
+        id:
+          type: integer
+          format: int64
+        studentId:
+          type: integer
+          format: int64
+        teacherId:
+          type: integer
+          format: int64
+        pack:
+          $ref: '#/components/schemas/PackDto'
+        created_at:
+          type: string
+          format: date-time
+        expires_at:
+          type: string
+          format: date-time
+
+
+
+
